--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
   }
 
   .gorne {
-  margin-top: 14px;
+  margin-top: 1vw;
   float: left;
   background-color: black;
-  width: 82.5px;
+  width: 5.375vw;
   height: 42.5px;
-  margin-right: 5px;
+  margin-right: 0.32vw;;
   }
 
   #esc {
@@ -40,12 +40,12 @@
     width: 97vw;
   }
   .numerowe {
-    margin-top: 14px;
+    margin-top: 1vh;
     float: left;
     background-color: black;
-    width: 85px;
-    height: 85px;
-    margin-right: 10px;
+    width: 5.537vw;
+    height: 12vh;
+    margin-right: 0.64vw;;
   }
   #pirszy {
     margin-left: 25px;
@@ -58,12 +58,12 @@
     width: 97vw;
   }
   .taby {
-    margin-top: 14px;
+    margin-top: 1vh;
     float: left;
     background-color: black;
-    width: 85px;
-    height: 85px;
-    margin-right: 10px;
+    width: 5.537vw;
+    height: 12vh;
+    margin-right: 0.64vw;;
   }
   #tabu {
     margin-left: 25px;
@@ -76,12 +76,12 @@
 
   .capsloki
   {
-    margin-top: 14px;
+    margin-top: 1vh;
     float: left;
     background-color: black;
-    width: 85px;
-    height: 85px;
-    margin-right: 10px;
+    width: 5.537vw;
+    height: 12vh;
+    margin-right: 0.64vw;;
   }
   #caps {
     margin-left: 25px;
@@ -94,12 +94,12 @@
   }
   .shifty
   {
-    margin-top: 14px;
+    margin-top: 1vh;
     float: left;
     background-color: black;
-    width: 85px;
-    height: 85px;
-    margin-right: 10px;
+    width: 5.537vw;
+    height: 12vh;
+    margin-right: 0.64vw;;
   }
   #lshift {
     width: 110px;
@@ -135,12 +135,12 @@
   }
   .dolnoe
   {
-    margin-top: 14px;
+    margin-top: 1vh;
     float: left;
     background-color: black;
-    width: 85px;
-    height: 85px;
-    margin-right: 10px;
+    width: 5.537vw;
+    height: 12vh;
+    margin-right: 0.64vw;;
   }
   #lctr {
    width: 110px;
