--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   }
   #tabu {
     margin-left: 25px;
-    width: 130px;
+    width: 8.5vw;;
   }
 
   #kapslokowa {
@@ -85,7 +85,7 @@
   }
   #caps {
     margin-left: 25px;
-    width: 180px;
+    width: 11.5vw;;
   }
   #shiftowa {
     width: 97vw;
@@ -102,7 +102,7 @@
     margin-right: 0.64vw;;
   }
   #lshift {
-    width: 110px;
+    width: 7.35vw;;
     margin-left: 25px;
   }
   #rshift {
@@ -111,23 +111,22 @@
 
   #enter {
     float: right;
-    margin-right: 115px;
+    margin-right: 14.6vw;
     background-color: black;
-    margin-top: 14px;;
-    width: 110px;
+    margin-top: 1vh;
+    width: 0.8px;
     height: 10px;
-    background-color: blue;
   }
   #gura {
-    width: 110px;
-    height: 85px;
+    width: 7vw;
+    height: 12vh;
     background-color: black;
   }
   #dul {
-    width: 60px;
-    height: 100px;
+    width: 4vw;;
+    height: 12.5vh;
     background-color: black;
-    margin-left: 50px;
+    margin-left: 3vw;
   }
   #dolna {
   height: 10px;
