--- a/index.html
+++ b/index.html
@@ -83,12 +83,15 @@
     height: 12vh;
     margin-right: 0.64vw;;
   }
+  #gwiazda {
+    margin-right: 50px;
+  }
   #caps {
     margin-left: 25px;
     width: 11.5vw;;
   }
   #shiftowa {
-    width: 97vw;
+    width: 98vw;
     height: 10px;
 
   }
@@ -142,7 +145,7 @@
     margin-right: 0.64vw;;
   }
   #lctr {
-   width: 110px;
+   width: 7.5vw;;
    margin-left: 25px;
   }
   #space {
