--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     margin-left: 25px;
   }
   #rshift {
-    width: 230px;
+    width: 14.5vw;
   }
 
   #enter {
@@ -152,58 +152,58 @@
     width: 30.5vw;;
   }
   #pageup {
-    margin-top: 14px;
+    margin-top: 1vh;
     float: left;
     background-color: black;
-    width: 85px;
-    height: 46.5px;
-    margin-right: 23px;
+    width: 5.537vw;
+    height: 6vh;
+    margin-right: 1.5vw;;
     }
   #up {
-    margin-top: 14px;
+    margin-top: 1vh;
     float: left;
     background-color: black;
-    width: 100px;
-    height: 46.5px;
-    margin-right: 23px;
+    width: 6.3vw;
+    height: 6vh;
+    margin-right: 1.5vw;;
     }
   #pagedown {
-    margin-top: 14px;
+    margin-top: 1vh;
     float: left;
     background-color: black;
-    width: 85px;
-    height: 46.5px;
-    margin-right: 5px;
+    width: 5.537vw;
+    height: 6vh;
+    margin-right: 1.5vw;;
   }
   #sczauki {
     float: right;
-    margin-right: 120px;
-    height: 10px;
-    width: 320px;
+    margin-right: 7vw;
+    height: 5vh;
+    width: 21vw;;
   }
   #left {
-    margin-top: 5px;
+    margin-top: 1vh;
     float: left;
     background-color: black;
-    width: 100px;
-    height: 46.5px;
-    margin-right: 7px;
+    width: 6.3vw;
+    height: 6vh;
+    margin-right: 0.7vw;;
   }
   #down {
-    margin-top: 5px;
+    margin-top: 1vh;
     float: left;
     background-color: black;
-    width: 100px;
-    height: 46.5px;
-    margin-right: 7px;
+    width: 6.3vw;
+    height: 6vh;
+    margin-right: 0.7vw;;
   }
   #right {
-    margin-top: 5px;
+    margin-top: 1vh;
     float: left;
     background-color: black;
-    width: 100px;
-    height: 46.5px;
-    margin-right: 6px;
+    width: 6.3vw;
+    height: 6vh;
+    margin-right: 0.7vw;;
   }
   #zasady {
     margin-top: 75vh;
