--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@ document.getElementById("hh").style.backgroundColor = "green";
   <div class="taby" id="pindel"> <h2>¨</h2></div>
 </div>
   <div id="enter">
-  <div id="gura"><h2></h2> Enter </div>
+  <div id="gura"><h2>Enter</h2>  </div>
   <div id="dul"> <h2></h2></div>
 </div>
 <div id="kapslokowa">
