--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     width: 30.5vw;;
   }
   #pageup {
-    margin-top: 1vh;
+    margin-top: 6vh;
     float: left;
     background-color: black;
     width: 5.537vw;
@@ -160,7 +160,7 @@
     margin-right: 1.5vw;;
     }
   #up {
-    margin-top: 1vh;
+    margin-top: 6vh;
     float: left;
     background-color: black;
     width: 6.3vw;
@@ -168,7 +168,7 @@
     margin-right: 1.5vw;;
     }
   #pagedown {
-    margin-top: 1vh;
+    margin-top: 6vh;
     float: left;
     background-color: black;
     width: 5.537vw;
@@ -176,8 +176,8 @@
     margin-right: 1.5vw;;
   }
   #sczauki {
-    float: right;
-    margin-right: 7vw;
+    float: left;
+    margin-left: 72vw;
     height: 5vh;
     width: 21.2vw;;
   }
