--- a/index.html
+++ b/index.html
@@ -222,6 +222,9 @@
     margin-right: 5vw;
     background-color: black;
   }
+  #testinginprogress {
+    float: left;
+  }
 
   </style>
 <script>
@@ -704,6 +707,11 @@ document.getElementById("hh").style.backgroundColor = "green";
   <div id="lbutton"> </div>
   <div id="rbutton"> </div>
 </div>
+</div>
+<div id=testinginprogress>
+<textarea>
+    KEYBOARD V0.65 ALPHA
+</textarea>
 </div>
 <!--
 <div id="zasady"> <h1> Write word as fast as possbile, you have 5 second for each word</h1> </div>
