--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang = "sv">
 <head>
   <meta charset="utf-8">
-  <title> Keyboard </title>
-  <link href="huj.css" rel="stylesheet">
+  <title> Map of europe in 1871 </title>
   <style>
-  *{
+  {
     margin: 0;
     padding: 0;
   }
@@ -23,12 +22,12 @@
   }
 
   .gorne {
-  margin-top: 1vw;
+  margin-top: 14px;
   float: left;
   background-color: black;
-  width: 5.375vw;
+  width: 82.5px;
   height: 42.5px;
-  margin-right: 0.32vw;;
+  margin-right: 5px;
   }
 
   #esc {
@@ -40,34 +39,34 @@
     width: 97vw;
   }
   .numerowe {
-    margin-top: 1vh;
+    margin-top: 14px;
     float: left;
     background-color: black;
-    width: 5.537vw;
-    height: 12vh;
-    margin-right: 0.64vw;;
+    width: 85px;
+    height: 85px;
+    margin-right: 10px;
   }
   #pirszy {
     margin-left: 25px;
   }
   #backspace {
-    width: 10.5vw;
+    width: 160px;
   }
   #Tabowa {
     height: 10px;
     width: 97vw;
   }
   .taby {
-    margin-top: 1vh;
+    margin-top: 14px;
     float: left;
     background-color: black;
-    width: 5.537vw;
-    height: 12vh;
-    margin-right: 0.64vw;;
+    width: 85px;
+    height: 85px;
+    margin-right: 10px;
   }
   #tabu {
     margin-left: 25px;
-    width: 8.5vw;;
+    width: 130px;
   }
 
   #kapslokowa {
@@ -76,60 +75,58 @@
 
   .capsloki
   {
-    margin-top: 1vh;
+    margin-top: 14px;
     float: left;
     background-color: black;
-    width: 5.537vw;
-    height: 12vh;
-    margin-right: 0.64vw;;
-  }
-  #gwiazda {
-    margin-right: 50px;
+    width: 85px;
+    height: 85px;
+    margin-right: 10px;
   }
   #caps {
     margin-left: 25px;
-    width: 11.5vw;;
+    width: 180px;
   }
   #shiftowa {
-    width: 98vw;
+    width: 97vw;
     height: 10px;
 
   }
   .shifty
   {
-    margin-top: 1vh;
+    margin-top: 14px;
     float: left;
     background-color: black;
-    width: 5.537vw;
-    height: 12vh;
-    margin-right: 0.64vw;;
+    width: 85px;
+    height: 85px;
+    margin-right: 10px;
   }
   #lshift {
-    width: 7.6vw;;
+    width: 110px;
     margin-left: 25px;
   }
   #rshift {
-    width: 14.5vw;
+    width: 230px;
   }
 
   #enter {
     float: right;
-    margin-right: 14.5vw;
+    margin-right: 115px;
     background-color: black;
-    margin-top: 1vh;
-    width: 0.8px;
+    margin-top: 14px;;
+    width: 110px;
     height: 10px;
+    background-color: blue;
   }
   #gura {
-    width: 7vw;
-    height: 12vh;
+    width: 110px;
+    height: 85px;
     background-color: black;
   }
   #dul {
-    width: 4vw;;
-    height: 12.5vh;
+    width: 60px;
+    height: 100px;
     background-color: black;
-    margin-left: 3vw;
+    margin-left: 50px;
   }
   #dolna {
   height: 10px;
@@ -137,96 +134,343 @@
   }
   .dolnoe
   {
-    margin-top: 1vh;
+    margin-top: 14px;
     float: left;
     background-color: black;
-    width: 5.537vw;
-    height: 12vh;
-    margin-right: 0.64vw;;
+    width: 85px;
+    height: 85px;
+    margin-right: 10px;
   }
   #lctr {
-   width: 7.5vw;;
+   width: 110px;
    margin-left: 25px;
   }
   #space {
-    width: 30.5vw;;
+    width: 465px;
+    color: white;
   }
   #pageup {
-    margin-top: 6vh;
+    margin-top: 14px;
     float: left;
     background-color: black;
-    width: 5.537vw;
-    height: 6vh;
-    margin-right: 1.5vw;;
+    width: 85px;
+    height: 46.5px;
+    margin-right: 23px;
     }
   #up {
-    margin-top: 6vh;
+    margin-top: 14px;
     float: left;
     background-color: black;
-    width: 6.3vw;
-    height: 6vh;
-    margin-right: 1.5vw;;
+    width: 100px;
+    height: 46.5px;
+    margin-right: 23px;
     }
   #pagedown {
-    margin-top: 6vh;
+    margin-top: 14px;
     float: left;
     background-color: black;
-    width: 5.537vw;
-    height: 6vh;
-    margin-right: 1.5vw;;
+    width: 85px;
+    height: 46.5px;
+    margin-right: 5px;
   }
   #sczauki {
-    float: left;
-    margin-left: 72vw;
-    height: 5vh;
-    width: 21.2vw;;
+    float: right;
+    margin-right: 120px;
+    height: 10px;
+    width: 320px;
   }
   #left {
-    margin-top: 1vh;
+    margin-top: 5px;
     float: left;
     background-color: black;
-    width: 6.3vw;
-    height: 6vh;
-    margin-right: 0.7vw;;
+    width: 100px;
+    height: 46.5px;
+    margin-right: 7px;
+    color: white;
   }
   #down {
-    margin-top: 1vh;
+    color: white;
+    margin-top: 5px;
     float: left;
     background-color: black;
-    width: 6.3vw;
-    height: 6vh;
-    margin-right: 0.7vw;;
+    width: 100px;
+    height: 46.5px;
+    margin-right: 7px;
   }
   #right {
-    margin-top: 1vh;
+      color: white;
+    margin-top: 5px;
     float: left;
     background-color: black;
-    width: 6.3vw;
-    height: 6vh;
-    margin-right: 0.7vw;;
+    width: 100px;
+    height: 46.5px;
+    margin-right: 6px;
   }
   #zasady {
     margin-top: 75vh;
     width: 60vw;
     font-size: 11px;
   }
-  #slowo1{
-    font-size: 40px;
-    margin-right: 50vw;
-    float: right;
-    background-color: black;
-  }
-  #slowo2{
-    font-size: 40px;
-    float: right;
-    margin-right: 5vw;
-    background-color: black;
-  }
 
+  #slowoo{
+    float: left;
+    font-size: 35px;
+  }
+  #slowo1{
+    float: left;
+    width: 20vw;
+    margin-left: 1vw;
+    font-size: 35px;
+    background-color: white;
+  }
+  #codoku{
+    float: right;
+  }
+  #punkty{
+    margin-left: 5vw;
+    float: left;
+    background-color: darkgreen;
+    width: 5vw;
+    height: 10vh;
+      font-size: 60px;
+      color: white;
+  }
+  #czas {
+    font-size: 60px;
+    margin-left: 47vw;
+      float: left;
+      background-color: red;
+      color: white;
+      width: 2,7vw;
+      height: 10vh;
+
+  }
   </style>
 <script>
 const sleep = (milliseconds) => {
   return new Promise(resolve => setTimeout(resolve, milliseconds))
+}
+let cheat = 0;
+sleep(1000).then(() => {
+  var testowanie = sessionStorage.getItem("baba");
+  console.log(testowanie);
+  let testowania = parseInt(testowanie)
+  console.log(testowania);
+  testowania++;
+  console.log(testowania);
+  if (testowania > 0) {
+   document.getElementById("punkty").innerHTML = testowania;
+  }
+  else {
+    alert("Welcome in KeyboardGame 2019  v0.1.1. Rules are simple, you need to write a word that will show in the Left Bottom corner of yout screen. You have 4 second to complete your Task, amount of seconds lefy will be showed in the red box. To show word press Enter or another key, you need to press Enter or another key also after every. If you will tape rigt letter key on the virtual keyborad will turn green, otherwise it will turn blue. After each writed word you gain 1 pont, your points are showed in the green box. If the timer will hit 0 you will lose all your points (game doesnt saves highscores) //GAME WAS DEVELOPED FOR 13 INCHES SCREENS//" );
+    document.getElementById("punkty").innerHTML = "0";
+  }
+
+  //let points = babas;
+  //document.getElementById("space").innerHTML = points;
+let Banan = 0;
+let slut = 0;
+let Banann = 0;
+let Baklazan = 0;
+let Kacper = 0;
+let Kacperr = 0;
+let Witcher = 0;
+let dada = 0;
+let Ruch = 0;
+let yestt = 0;
+let niD = Math.floor(Math.random() *3) +1;
+if (niD == 1) {
+  niD--;
+  Kacper++;
+  document.getElementById("slowo1").style.backgroundColor = "white";
+  document.getElementById("slowo1").innerHTML = "HEJ";
+}
+if (niD > 0) {
+  let sputnik = 4;
+document.getElementById("czas").innerHTML = sputnik;
+sleep(1000).then(() => {
+sputnik--;
+document.getElementById("czas").innerHTML = sputnik;
+sleep(1000).then(() => {
+sputnik--;
+document.getElementById("czas").innerHTML = sputnik;
+sleep(1000).then(() => {
+sputnik--;
+document.getElementById("czas").innerHTML = sputnik;
+sleep(1000).then(() => {
+sputnik--;
+document.getElementById("czas").innerHTML = sputnik;
+let smutek = -1;
+sessionStorage.setItem("baba", smutek);
+location.reload();
+})
+})
+})
+})
+}
+  document.addEventListener("keydown", function onEvent(event) {
+  if (event.key === "h" && Kacper == 1 ) {
+  sleep(1).then(() => {
+  Banan++;
+  Kacper++;
+  document.getElementById("hh").style.backgroundColor = "green";
+  })
+}
+  if (event.key === "e" && Kacper == 2 ) {
+      sleep(1).then(() => {
+  document.getElementById("ee").style.backgroundColor = "green";
+  Banan++;
+  Kacper++;
+  })
+}
+  if (event.key === "j" && Kacper == 3 ) {
+      sleep(1).then(() => {
+  document.getElementById("jj").style.backgroundColor = "green";
+  Banan++;
+  })
+}
+if (Banan == 3) {
+   document.getElementById("hh").style.backgroundColor = "black";
+   document.getElementById("ee").style.backgroundColor = "black";
+   document.getElementById("jj").style.backgroundColor = "black";
+   yestt++;
+   Banan--;
+   Banan--;
+   Banan--;
+   Kacper--;
+   Kacper--;
+   Kacper--;
+}
+if (niD == 2) {
+  Kacperr++;
+  document.getElementById("slowo1").style.backgroundColor = "white";
+  document.getElementById("slowo1").innerHTML = "NTIG";
+  niD--;
+  niD--;
+}
+  if (event.key === "n" && Kacperr == 1) {
+    Kacperr++;
+    sleep(1).then(() => {
+  document.getElementById("nn").style.backgroundColor = "green";
+})
+}
+  if (event.key === "t" && Kacperr == 2) {
+    Kacperr++;
+    sleep(1).then(() => {
+  document.getElementById("tt").style.backgroundColor = "green";
+    })
+}
+  if (event.key === "i" && Kacperr == 3) {
+    sleep(1).then(() => {
+  document.getElementById("ii").style.backgroundColor = "green";
+    Kacperr++;
+    })
+}
+if (event.key === "g" && Kacperr == 4) {
+  Kacperr++;
+  document.getElementById("up").innerHTML = Kacperr;
+  sleep(1).then(() => {
+document.getElementById("gg").style.backgroundColor = "green";
+})
+}
+ if (Kacperr == 5) {
+   sleep(5).then(() => {
+   document.getElementById("nn").style.backgroundColor = "black";
+   document.getElementById("tt").style.backgroundColor = "black";
+   document.getElementById("ii").style.backgroundColor = "black";
+   document.getElementById("gg").style.backgroundColor = "black";
+   yestt++;
+   document.getElementById("down").innerHTML = yestt;
+   Kacperr--;
+   Kacperr--;
+   Kacperr--;
+   Kacperr--;
+   Kacperr--;
+})
+ }
+ if (niD == 3) {
+   Witcher++;
+   niD--;
+   niD--;
+   niD--;
+   document.getElementById("slowo1").style.backgroundColor = "white";
+   document.getElementById("slowo1").innerHTML = "WITCHER";
+ }
+ if (event.key === "w" && Witcher == 1)
+ {
+    sleep(1).then(() => {
+ document.getElementById("ww").style.backgroundColor = "green";
+ Witcher++;
+ })
+ }
+
+ if (event.key === "i" && Witcher == 2 ) {
+   sleep(1).then(() => {
+ document.getElementById("ii").style.backgroundColor = "green";
+ Witcher++;
+ })
+ }
+ if (event.key === "t" && Witcher == 3 ) {
+   sleep(1).then(() => {
+ document.getElementById("tt").style.backgroundColor = "green";
+ Witcher++;
+ })
+ }
+ if (event.key === "c" && Witcher == 4 ) {
+   sleep(1).then(() => {
+ document.getElementById("cc").style.backgroundColor = "green";
+ Witcher++;
+ })
+ }
+ if (event.key === "h" && Witcher == 5 ) {
+   sleep(1).then(() => {
+ document.getElementById("hh").style.backgroundColor = "green";
+ Witcher++;
+ })
+ }
+ if (event.key === "e" && Witcher == 6 ) {
+   sleep(1).then(() => {
+ document.getElementById("ee").style.backgroundColor = "green";
+ Witcher++;
+ })
+ }
+ if (event.key === "r" && Witcher == 7 ) {
+   sleep(1).then(() => {
+ document.getElementById("rr").style.backgroundColor = "green";
+ Witcher++;
+ })
+ }
+ if (Witcher == 8) {
+   document.getElementById("ww").style.backgroundColor = "black";
+   document.getElementById("ii").style.backgroundColor = "black";
+   document.getElementById("tt").style.backgroundColor = "black";
+   document.getElementById("cc").style.backgroundColor = "black";
+   document.getElementById("hh").style.backgroundColor = "black";
+   document.getElementById("ee").style.backgroundColor = "black";
+   document.getElementById("rr").style.backgroundColor = "black";
+   yestt++;
+   Witcher--;
+   Witcher--;
+   Witcher--;
+   Witcher--;
+   Witcher--;
+   Witcher--;
+   Witcher--;
+   Witcher--;
+ }
+if (yestt == 1) {
+  document.getElementById("left").innerHTML = yestt;
+  if (testowania >= 0) {
+  let points = testowania
+  console.log(points);
+  sessionStorage.setItem("baba", points);
+  location.reload();
+}
+else {
+let points = 0;
+sessionStorage.setItem("baba", points);
+location.reload();
+}
 }
 document.addEventListener("keypress", function onEvent(event) {
 if (event.key === "Escape") {
@@ -595,7 +839,11 @@ document.getElementById("hh").style.backgroundColor = "green";
 
 )
 }
-});
+})
+
+}
+)
+})
 </script>
 </head>
 <body>
@@ -650,7 +898,7 @@ document.getElementById("hh").style.backgroundColor = "green";
   <div class="taby" id="pindel"> <h2>¨</h2></div>
 </div>
   <div id="enter">
-  <div id="gura"><h2>Enter</h2>  </div>
+  <div id="gura"><h2></h2> Enter </div>
   <div id="dul"> <h2></h2></div>
 </div>
 <div id="kapslokowa">
@@ -705,11 +953,17 @@ document.getElementById("hh").style.backgroundColor = "green";
   <div id="rbutton"> </div>
 </div>
 </div>
-<!--
-<div id="zasady"> <h1> Write word as fast as possbile, you have 5 second for each word</h1> </div>
-<div id="slowo1"> HEJ </div>
-<div id="slowo2"> NTIG </div>
-</div> -->
+<div id="slowoo"> WRITE: <div>
+<div id="slowo1"> </div>
+<div id="codoku">
+<div id="czas">
+  <div id=czasow> </div>
+  <div id=czasowy> </div>
+  <div id=czasowa> </div>
+  <div id=czasowo> </div>
+ </div>
+<div id="punkty"> </div>
+<div>
 
 </body>
 </html>
