--- a/index.html
+++ b/index.html
@@ -115,7 +115,6 @@
     margin-top: 0px;;
     width: 105px;
     height: 10px;
-    background-color: blue;
   }
   #gura {
     width: 110px;
@@ -123,6 +122,7 @@
     background-color: black;
   }
   #dul {
+    margin-top: 0px;
     width: 60px;
     height: 100px;
     background-color: black;
