--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "sv">
 <head>
   <meta charset="utf-8">
-  <title> Map of europe in 1871 </title>
+  <title> KEY board game 2019</title>
   <style>
   {
     margin: 0;
